# Snix-Bot

./: Cargo.toml  flake.nix
.githooks/: pre-commit
nix/: cargo.nix  treefmt.nix  utils.nix
src/: args.rs  commands.rs  main.rs  nixpkgs.rs  snix.rs
src/commands/: mod.rs
src/commands/snix/: io.rs  maintainer.rs  mod.rs  repl.rs
src/events/: mod.rs  ready.rs
