[dependencies]
clap = {version = "4.5.47", features = ["derive", "env"]}
colog = "1.3.0"
poise = "0.6.1"
tokio = {version = "1.47.1", features = ["macros", "rt-multi-thread", "rt"]}
log = "0.4.28"
snix-eval = {git = "https://git.snix.dev/snix/snix.git", version = "0.1.0"}
alejandra = {git = "https://github.com/kamadorueda/alejandra.git", version = "4.0.0"}
tempfile = "3.21.0"
lazy_static = "1.5.0"
git2 = "0.20.2"
openapi-github = "0.1.0"
bytes = "1.10.1"

[package]
name = "Snix-Bot"
version = "0.0.0"
authors = ["Notarin Steele"]
edition = "2024"
