[dependencies]
clap = {version = "4.5.47", features = ["derive", "env"]}
colog = "1.3.0"
tokio = {version = "1.47.1", features = ["macros", "rt-multi-thread", "rt"]}
log = "0.4.28"
snix-eval = {git = "https://git.snix.dev/snix/snix.git", version = "0.1.0"}
alejandra = {git = "https://github.com/kamadorueda/alejandra.git", version = "4.0.0"}
tempfile = "3.21.0"
lazy_static = "1.5.0"
git2 = "0.20.2"
openapi-github = "0.1.0"
bytes = "1.10.1"
poise = {git = "https://github.com/serenity-rs/poise.git", rev = "7f265e554a9a90068ea4df5dc502f38255bc0d59"}
regex = "1.11.2"
rustc-hash = "2.1.1"
reqwest = "0.11.27"

[package]
name = "Snix-Bot"
version = "0.0.0"
authors = ["Notarin Steele"]
edition = "2024"
